--- a/Arduino/Raspi_ATX_PMU/makefile
+++ b/Arduino/Raspi_ATX_PMU/makefile
@@ -4,6 +4,14 @@ ARDUINO_DIR  = /Applications/Arduino.app
 TARGET       = Raspi_ATX_PMU
 ARDUINO_LIBS =  ~/Projects/CyrusBuiltHTPC/Arduino/Raspi_ATX_PMU/lib
 
+MCU          = atmega328p
+F_CPU        = 16000000
+
+# Avrdude code
+ARDUINO_PORT = /dev/ttyACM0
+AVRDUDE_ARD_PROGRAMMER = arduino
+AVRDUDE_ARD_BAUDRATE = 115200
+
 BOARD_TAG    = Uno
 ARDUINO_PORT = /dev/ttyUSB0
 
